Complete with issue
Background overflows when adding too many elements

--- a/style.css
+++ b/style.css
@@ -55,43 +55,76 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Original CSS */
+
+/* Color Theme Swatches in Hex */
+:root {
+	--background-colour: #37748C;
+	--table-colour: #273B40;
+	--form-colour: #F28D35;
+	--button-colour: #D9BEB8;
+	--LOFOTEN-Reinefjorden-|-DayLight-5-hex { color: #590808; }
+}
+
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-.grid-small {
-    height: 100vh;
-    display: grid;
-    grid-template: 1fr 1fr / 2fr 1fr;
-	transition: grid-template-columns 1s ease-in;
-}
-
-.grid-big {
-	height: 100vh;
-	display: grid;
-	grid-template: 1fr 1fr / 1fr;
+	background-color: var(--form-colour);
 }
 
 table {
-    border-collapse: collapse;
     width: 100%;
+    border-collapse: collapse;
+    background-color: var(--table-colour, black);
+	color: white;
 }
 
 th, td {
     border: 2px solid black;
+	text-align: center;
+	vertical-align: middle;
+	width: fit-content;
 }
 
-.form-visible {
-    display: grid;
-    justify-items: center;
+table button {
+	background-color: transparent;
+	border: transparent;
+	font-size: 1.5rem;
+}
+
+button:not(table button) {
+	margin-top: 24px;
+	width: 100px;
+	height: 30px;
+	background-color: var(--button-colour);
+	border: 1px solid white;
+	border-radius: 12px;
+}
+
+.grid {
+	height: 100vh;
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+	grid-template-columns: var(--col1, 1fr) var(--col2, 0fr);
+	grid-row: 1 / 3;
+	transition: all 0.25s;
+}
+
+.grid-big {
+	--col1: 1fr;
+	--col2: 0fr;
+}
+
+.grid-small {
+	--col1: 2fr;
+	--col2: 1fr;
 }
 
 .form-hidden {
 	display: none;
 }
 
-button {
-    margin-top: 24px;
+.form-visible {
+    display: grid;
+    justify-items: center;
 }
 
 .books {
@@ -101,6 +134,8 @@ button {
     grid-row: 1 / 3;
     width: 100%;
     padding: 12px;
+	background-color: var(--background-colour);
+	box-shadow: 0 0 20px black;
 }
 
 .form-input,
@@ -112,4 +147,8 @@ button {
 
 .form-input {
     align-items: flex-start;
+}
+
+.small-column {
+	width: 100px;
 }
